--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <h2>Ruby Nguyen</h2>
   <p>Welcome to my page</p>
   <img src="welcome.png">
-
+  <h2>Travel to Sapa</h2>
+  <iframe src="https://uploads.knightlab.com/storymapjs/e0d9e3acb432bfd09e025fcc4a1d2411/the-5-must-see-destinations-in-sapa/index.html" frameborder="0" width="100%" height="800"></iframe>
 </body>
 </html>
