--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <h2>Ruby Nguyen</h2>
   <p>Welcome to my page</p>
   <img src="welcome.png">
-  <h2>Travel to Sapa</h2>
+  <h2>Story 1: Travel to Sapa</h2>
   <iframe src="https://uploads.knightlab.com/storymapjs/e0d9e3acb432bfd09e025fcc4a1d2411/the-5-must-see-destinations-in-sapa/index.html" frameborder="0" width="100%" height="800"></iframe>
+  <h3> Things to do in SaPa</h3>
+  <p> Besides visiting the famous places, vistors also have opportunities to exprience life of Sapa citizens such as trying traditional outfits or attending the "love market"</p>
 </body>
 </html>
